# feti

./: .gitignore  README.md  pyproject.toml  secrets.tpl.toml  settings.toml
feti/: __main__.py  cache.py  config.py  model.py  server.py
templates/: base.html.jinja2  index.html.jinja2
