[project]
name = "feti"
authors = [
    {name = "72nd", email = "msg@72nd.com"}
]
description = "Simple timetable for festivals"
version = "0.1.0"
dependencies = [
    "click",
    "fastapi",
    "Jinja2",
    "nocodb@git+https://github.com/alex-berlin-tv/python-nocodb.git#egg=relation_create",
    "pydantic",
    "typed-settings",
    "typer",
    "uvicorn",
]

[tool.setuptools]
packages = ["feti"]

[project.scripts]
feti = "feti:__main__.app"